Fix css spacing on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -201,6 +201,7 @@ footer {
 		-webkit-mask-image: linear-gradient(to bottom, transparent 0%, black 10%, black 90%, transparent 100%);
 		mask-image: linear-gradient(to bottom, transparent 0%, black 10%, black 90%, transparent 100%);
 		border: none;
+		overflow-y: scroll;
 		}
 	.menu {
 		width: auto;
